'functional' - still has style + layout issues

--- a/src/components/Run/Run.scss
+++ b/src/components/Run/Run.scss
@@ -32,3 +32,9 @@ limitations under the License.
 .bx--snippet--multi{
   overflow-x: auto
 }
+
+.pipelineGraph {
+  display: flex;
+  width: 500px;
+  height: 500px;
+}
